# blockgametracker

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: docker-build.yaml
blockgametracker_protocol/ping/: Ping.go  PingBatch.go  Platform.go
config/: servers.yaml
deploy/: deployment.yaml  kustomization.yaml  service.yaml  servicemonitor.yaml
deploy/config/: servers.yaml
internal/config/: config.go
internal/ping/: metrics.go  ping.go
internal/queue/: client.go  encode.go  loop.go  spool.go  spool_drain_test.go
kustomize/base/: deployment.yaml  kustomization.yaml  service.yaml  servicemonitor.yaml
kustomize/base/config/: servers.yaml
kustomize/base/kustomizeconfig/: servicemonitor-labels.yaml
schemas/: ping.fbs
src/blockgametracker/: main.py
