[tool.poetry]
name = "blockgametracker"
version = "0.0.1" # Unused
description = "Minecraft server prometheus exporter"
authors = ["Michael H. <michael@iptables.sh>"]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.0"
MarkupSafe = "2.0.1"
loguru-logging-intercept = "^0.1.1"
prometheus-client = "^0.17.1"
func-timeout = "^4.3.5"
mcstatus = "^11.0.0"
aslookup = "^1.5.0"
cachetools = "^5.3.0"
dns-cache = "^0.3.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
